--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- No live site, very simple - Clone the repo, then right click on index.html - Copy path and paste into browser and play. - OR - Double click on index.html and your default browser should open it.",
   "main": "hangman.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node hangman.js"
   },
   "repository": {
     "type": "git",
